<?xml version="1.0" encoding="utf-8"?>
<!--
 * SysLog - A simple logging tool
 * Copyright (C) 2013-2014  Scott Warner <Tortel1210@gmail.com>
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<resources>
    <string name="app_name">SysLog</string>
    
    <!-- Strings in the activity -->
    <string name="desc">This application will save the logs, compress them, and let you upload them easily.</string>
    <string name="log_select">Select log types:</string>
    <string name="main_log">Main Log</string>
    <string name="event_log">Event Log</string>
    <string name="kernel_log">Kernel Log</string>
    <string name="last_kmsg">Last Kernel Log</string>
    <string name="modem_log">Modem Log</string>
    <string name="take_log">Take Log</string>

    <string name="scrub_log">Scrub potentially personal information from the logs</string>
    
    <string name="optional_info">Optional Information:</string>
	<string name="file_name">Text to append to file name</string>
	<string name="notes">Notes to include in the zip file</string>
	<string name="grep_prompt">Grep the following log:</string>
	<string name="grep_hint">Grep String</string>
    
    <!-- Status messages -->
    <string name="working">Working&#8230;</string>
    <string name="done">Done!</string>
    <string name="checking_root">Checking root access&#8230;</string>
    <string name="close">Close</string>
    <string name="save_path">Logs saved to sdcard/</string>
    <string name="space_freed">Freed %.1f MB</string>
    
    <!-- Edit path strings -->
    <string name="change_path">Set Root Path</string>
    <string name="path_info">This sets the path to use instead of /storage/emulated/ for root access on Android 4.3+ devices.\n
<b>DO NOT CHANGE UNLESS YOU KNOW WHAT YOU ARE DOING.</b></string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    
    <!-- Warnings/Errors -->
    <string name="noroot">Warning: No root access. Logs may be incomplete or missing.</string>
    <string name="noroot_jb">Warning: No root access. Without root, it is not possible to get system or modem logs, 
and with some 3.x kernels it also may not be able to get kernel logs.</string>
    <string name="error">Error saving logs. Check your SD card.</string>
    <string name="storage_err">The external storage is not writable, unable to save logs.</string>
    <string name="warn_modem">Note: Modem logs may contain personal information such as phone number or IMEI.</string>
	
	<!-- Menu Strings -->
	<string name="about">About</string>
	<string name="faq">FAQ</string>
	<string name="clean_uncompressed">Clean Uncompressed Logs</string>
	<string name="clean_all">Clean All Logs</string>
	<string name="menu_settings">Settings</string>
	
	<!-- Exception dialog strings -->
	<string name="show_stacktrace">Show Stacktrace</string>
	<string name="error_dialog_title">Uh-oh!</string>
	<string name="send_bugreport">Send Bug Report</string>
	<string name="dismiss">Dismiss</string>
	<string name="bugreport_notice">Note: Sending a bug report opens an email application so you can email the developer</string>
	<string name="bugreport_disabled">Note: Bug reporting has been disabled because you are running Android 4.3 or higher and did not use root.
Please enable root access and try again.</string>
	
	<string name="syslog_faq">SysLog FAQ</string>
	
	<!-- Oh shit strings -->
	<string name="oh_shit_title">Well, this sucks</string>
	<string name="oh_shit_message">You don\'t seem to have an email application installed. SysLog will now crash.
	    If you have the option, please send a report through the force close dialog.</string>
</resources>
