<?xml version="1.0" encoding="utf-8"?>
<!--
 * SysLog - A simple logging tool
 * Copyright (C) 2013-2014  Scott Warner <Tortel1210@gmail.com>
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/full_menu_settings"
        android:title="@string/menu_settings"
        android:showAsAction="always"
        android:icon="@drawable/abs__ic_menu_moreoverflow_holo_dark">
        <menu xmlns:android="http://schemas.android.com/apk/res/android" >
	        <group android:id="@+id/group_popupmenu">
			    <item 
			        android:id="@+id/clean_uncompressed"
			        android:title="@string/clean_uncompressed"
			        android:showAsAction="never" />
			    <item
			        android:id="@+id/clean_all"
			        android:title="@string/clean_all"
			    	android:showAsAction="never" />
			    <item
			        android:id="@+id/change_path"
			        android:title="@string/change_path"
			        android:showAsAction="never" />
			    <item android:id="@+id/faq"
			        android:title="@string/faq"
			        android:showAsAction="never" />
			    <item android:id="@+id/about"
			        android:title="@string/about"
			        android:showAsAction="never" />
		    </group>
	    </menu>
    </item>
</menu>
